--- a/src/fullhouse/RatingSystem.form
+++ b/src/fullhouse/RatingSystem.form
@@ -150,6 +150,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="j_nrating1">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel4">
       <Properties>
@@ -157,6 +160,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="j_rating1">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="j_rating2">
     </Component>
